<?xml version="1.0" encoding="UTF-8"?>
<!--
JBoss, Home of Professional Open Source Copyright 2009, Red Hat
Middleware LLC, and others contributors as indicated by the @authors
tag. All rights reserved. See the copyright.txt in the distribution
for a full listing of individual contributors. This copyrighted
material is made available to anyone wishing to use, modify, copy, or
redistribute it subject to the terms and conditions of the GNU Lesser
General Public License, v. 2.1. This program is distributed in the
hope that it will be useful, but WITHOUT A WARRANTY; without even the
implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
PURPOSE. See the GNU Lesser General Public License for more details.
You should have received a copy of the GNU Lesser General Public
License, v.2.1 along with this distribution; if not, write to the Free
Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
02110-1301, USA.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>org.jboss.narayana</groupId>
    <artifactId>narayana-all</artifactId>
    <version>5.9.3.Final-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jboss.narayana.rts</groupId>
  <artifactId>rest-tx</artifactId>
  <packaging>pom</packaging>
  <name>Narayana: RESTful transactions</name>
  <description>RESTful transactions</description>
  <url>http://www.jboss.org/jbosstm</url>
 
  <properties>
    <version.wildfly-swarm>2017.2.0</version.wildfly-swarm>
    <!-- Impportant: the resteasy client version must match the one used by wildfly.swarm -->
    <version.resteasy-client>3.1.3.Final</version.resteasy-client>
    <version.json.api>1.1</version.json.api>
    <version.jaxrs.api>1.0.0.Final</version.jaxrs.api>

    <version.jboss-interceptors>1.0.1.Final</version.jboss-interceptors>
    <version.jaxrs-api>2.0</version.jaxrs-api>
    <version.cdi-api>1.0-SP1</version.cdi-api>
    <version.junit>4.12</version.junit>

    <version.narayana>${project.version}</version.narayana>

    <maven.compiler.source>1.8</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <inherited>false</inherited>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-install-plugin</artifactId>
            <executions>
              <execution>
                <id>default-install</id>
                <phase>install</phase>
              </execution>
            </executions>
            <inherited>false</inherited>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
	  <id>jdk11</id>
          <activation>
             <jdk>[11,)</jdk>
          </activation>
          <properties>
             <jvm.args.modular>--add-modules=java.se</jvm.args.modular>
	     <version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec>1.0.1.Final</version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec>
	  </properties>
	  <dependencies>
             <dependency>
                <groupId>org.jboss.spec.javax.xml.bind</groupId>
                <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
                <version>${version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec}</version>
		<scope>provided</scope>
             </dependency>
	  </dependencies>
      </profile>
  </profiles>

  <modules>
    <module>at</module>
    <module>lra</module>
    <module>sra</module>
  </modules>
</project>
